samples/_failures_safe/1761289884_0bca1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fb7a923.c: In function ‘main’:
./samples/SAFE/__tmp_7fb7a923.c:161:5: error: expected expression at end of input
  161 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_7fb7a923.c:161:5: error: expected declaration or statement at end of input
